ajax modal change

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Main#indexg</h1>
 <p>Find me in app/views/main/indexg.html.erb</p>
+<div class="container">
 <table id = "asd" class="display" data-scource="<%=main_index_url(format:"json")%>">
   <thead>
 	<th>Name</th>
@@ -9,3 +10,5 @@
   <tbody>
   </tbody>
 </table>
+<div class="modal fade" id="simple-modal"></div>
+</div>
